fixing overlap when an element is pushed off canvas

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: #f0f0f0;
 }
 
 .App-logo {
